# rules_docusaurus

./: .bazelignore  .bazelrc  BUILD.bazel  WORKSPACE  index.bzl  internal_deps.bzl  package.json
docusaurus/: BUILD.bazel  defs.bzl  repositories.bzl
docusaurus/private/: BUILD.bazel  actions.bzl  launcher_template.sh  rules.bzl
examples/docs-demo-docusaurus/: .gitignore  BUILD.bazel  README.md  WORKSPACE  docusaurus.config.js  package.json
examples/docs-demo-docusaurus/src/pages/: index.js
